# ledgerly

./: .gitignore  CLAUDE.md  KICKOFF.md  README.md  ruff.toml
.claude/: check-aws-profile.sh  settings.json
.github/: dependabot.yml
backend/: pyproject.toml  requirements-dev.txt
backend/adapters/: bedrock.py  dynamo.py  s3.py  sqs.py
backend/core/: accounts.py  categories.py  csv_normalize.py  cycles.py  ids.py  imports.py  merchant_rules.py  settings.py  transactions.py
backend/core/categorize/: __init__.py  prompt.py
backend/eval/: README.md  __init__.py  harness.py  run.py
backend/eval/samples/: labeled_set.example.json
backend/functions/api_categories/: handler.py
backend/functions/api_imports/: handler.py
backend/functions/api_settings/: handler.py
backend/functions/api_transactions/: handler.py
backend/functions/categorizer/: __init__.py  handler.py
backend/functions/importer/: handler.py
backend/tests/unit/: test_bedrock_adapter.py  test_categories.py  test_categorize.py  test_categorizer.py  test_csv_normalize.py  test_cycles.py  test_dynamo_adapter.py  test_eval.py  test_handlers.py  test_import_domain.py  test_import_handlers.py  test_importer.py  test_settings.py
docs/: PROJECT-adl.md  PROJECT-architecture.md  PROJECT-evaluation.md  PROJECT-glossary.md  PROJECT-plan.md  PROJECT-reference.md  PROJECT-requirements.md  ledgerly-adl.md  ledgerly-architecture.md  ledgerly-backlog.md  ledgerly-evaluation.md  ledgerly-glossary.md  ledgerly-plan.md  ledgerly-reference.md  ledgerly-requirements.md  render_architecture.py
infra/: app.py  (+2 more)
(+35 files in other folders)
